@@ -1,6 +1,7 @@
 Revision history for Perl extension Color::Spectrum.
 
 1.11
+    - argument validation for color names
 
 1.10
     - able to parse non hex color names
